--- a/prototype.html
+++ b/prototype.html
@@ -12,7 +12,7 @@
 
 <div id="sidebar">
 	<div id="instruction">
-		<h2> Instructions</h2>
+		<h1> Instructions</h1>
 		<p>Thank you for joining our research. Your participation will help to improve automatically-generated image captions and help blind and visually impaired
 		people learn about the image.</p>
 		<p>To guarantee the quality of work, please read carefully the following instructions. A test needs to be passed before starting to work.</p>
@@ -49,13 +49,16 @@
 
 
 <div id="content">
+	<h1>Caption highlighting task</h1>
 	<div class="start">
 		<a href="#train">The task will officially start after completing the following test:</a>
 	</div>
+
 	<div id="train"></div>
 	<div class="start">
 		<a href="#question">Let's start!</a>
 	</div>
+	
 	<div id="question" onmouseup="labelText()">
 		<h3> Highlight the 5 important elements and rank them</h3>
 		<img src="img/dog.png">
@@ -65,6 +68,7 @@
 		<p>Black dog under the table wanting to get petted.</p>
 		<p>I see a black dog getting his face rubbed.</p>
 	</div>
+	
 	<div id="dragArea">
 		<p>
 			<span> I think the most important element is</span>
