CSS changed again

--- a/prototype.html
+++ b/prototype.html
@@ -12,21 +12,35 @@
 
 <div id="sidebar">
 	<div id="instruction">
-		<h1> Instructions</h1>
-		<p>Thank you for joining our research. Your participation will help to improve automatically-generated image captions and help blind and visually impaired
-		people learn about the image.</p>
-		<p>To guarantee the quality of work, please read carefully the following instructions. A test needs to be passed before starting to work.</p>
-		<ol>
-			<li>Look at the image.</li>
-			<li>You will be shown 5 captions. Please highlight the words/phrases you think are most important to understand the image. Click your mouse and drag until the word ends will highlight the word you hope to mark.</li>
-			<li>You need to highlight 5 words/phrases. Only highlight the words with substantial meanings, such as "dog", "happy", "run" etc. instad of "at/in/on" "a/an/the" or "kind of".</li>
-			<li>The word highlighted needs to be complete.</li>
-			<li>You can "undo" your last move, or "clear all" previous marks.</li>
-			<li>Input reasons for your selection.</li>
-			<li>Choose one of your favorite caption.</li>
-			<li>Input reasons for your choice.</li>
-			<li>Click "Submit" and done!</li>
-		</ol>
+		<h2> Welcome</h2>
+			<p>Thank you for joining our research. Your participation will help to improve automatically-generated image captions and help blind and visually impaired people learn about the image.</p>
+			<p>To guarantee the quality of work, please read carefully the following instructions. A test needs to be passed before starting to work.</p>
+		<h2>How to do this</h2>
+			<h3>Guidance
+				<p class="step">Task 1</p>
+					<ol>
+						<li>Look at the image.</li>
+						<li>You will be shown 5 captions. Please highlight the words/phrases you think are most important to understand the image. Click your mouse and drag until the word ends will highlight the word you hope to mark.</li>
+						<li>You need to highlight 5 words/phrases. Only highlight the words with substantial meanings, such as "dog", "happy", "run" etc. instad of "at/in/on" "a/an/the" or "kind of".</li>
+						<li>The word highlighted needs to be complete.</li>
+					</ol>
+				<p class="step">Task 2</p>
+					<ol>
+						<li>Rank the elements according to its importance.</li>
+						<li>From 1 to 5 it indicates "most important" to "least important"</li>
+					</ol>
+				<p class="step">Task 3</p>
+					<ol>
+						<li>Choose your favorite caption.</li>
+						<li>Input reasons for your choice.</li>
+						<li>Click Submit button and done!</li>
+					</ol>
+			<h3>Operation</h3>
+				<ul>
+					<li>Click and drag to highlight the elements you think are important.</li>
+					<li>You can change your selection by clicking the Undo button to withdraw your last move, or the clear all button to redo the test.</li>
+				</ul>
+
 			<!--<This task aims to help blind and visually impaired people to understand images. The research results will help to improve the performance of machine in automatically generating description of the images.</p>
 			<p>Thank you for your participation and work. It might help a lot of people with visual impairment in the future.>-->
 		<script type="text/javascript" src="menulist.js"></script>
