modify some detail to parse data well

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 <!-- 以下为德元动态更新部分 -->
 
 <form name='mturk_form' method='post' id='mturk_form' action='https://workersandbox.mturk.com/mturk/externalSubmit'>
+<!-- <form name='mturk_form' method='post' id='mturk_form' action='https://www.mturk.com/mturk/externalSubmit'> -->
 <input type="hidden" value="" name="assignmentId" id="assignmentId">
-<input type="hidden" value="" name="reportId" id="reportId">
+<input type="hidden" value="" id="reportId">
 
 <div id="content">
 	<h1>Select the important things in the captions!</h1>
@@ -116,19 +117,19 @@
 	<div id="captext3">
 		<h3> Task 3: Choose the best caption </h3>
 		
-		<input type="radio" name="best" value="b1" required>
+		<input type="radio" name="best" id="b1" required>
 		<label class="c1"></label>
 		<br>
-		<input type="radio" name="best" value="b2">
+		<input type="radio" name="best" id="b2">
 		<label class="c2"></label>
 		<br>
-		<input type="radio" name="best" value="b3">
+		<input type="radio" name="best" id="b3">
 		<label class="c3"></label>
 		<br>
-		<input type="radio" name="best" value="b4">
+		<input type="radio" name="best" id="b4">
 		<label class="c4"></label>
 		<br>
-		<input type="radio" name="best" value="b5">
+		<input type="radio" name="best" id="b5">
 		<label class="c5"></label>
 		<br>
 
