modified the button one

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 		</div>
 	</div>
 	<div>
-		<!-- <button class="ud" onclick="undo()">undo last step</button>
-		<button class="ca" onclick="clearAll()">clear all</button> -->
+		<button class="ud" type="button" onclick="undo()">undo last step</button>
+		<button class="ca" type="button" onclick="clearAll()">clear all</button>
 	</div>
 
 	<div id="captext3">
@@ -150,7 +150,7 @@
 		<br>
 		<textarea name="reason" oninvalid="setCustomValidity('You need to write your reason.');" onchange="setCustomValidity('');" required></textarea>
 		<br>
-		<input type="submit" name="s" value="submit">
+		<input type="submit" name="s" value="Submit">
 
 
 	</div>
